[package]
name = "smolsocket"
version = "0.3.1"
authors = ["hlzhang <hlzhang@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "SocketAddr based on smoltcp's IpAddress"
homepage = "https://github.com/hlzhang/smolsocket/"
repository = "https://github.com/hlzhang/smolsocket/"
documentation = "https://docs.rs/smolsocket"
readme = "README.md"
exclude = [
    ".circleci/*",
    ".gitignore",
    ".travis.yml",
    ".versionrc.js",
    "ver",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "0.5", optional = true }
byteorder = "1"
futures = { version = "0.3.0", optional = true }
log = "0.4"
smoltcp = { version = "0.6.0", default-features = false, features = [] }
tokio = { version = "0.2.22", default-features = false, features = ["full"], optional = true }
tokio-util = { version = "0.3.0", features = ["full"], optional = true }

[dev-dependencies]
pretty_env_logger = "0.3"

[features]
rt_tokio = ["bytes", "futures", "std", "tokio", "tokio-util"]
std = ["smoltcp/std"]
verbose = []
"proto-ipv4" = ["smoltcp/proto-ipv4"]
"proto-ipv6" = ["smoltcp/proto-ipv6"]
# `RUST_BACKTRACE=1 cargo test --lib --no-default-features --features default -- --exact --nocapture --test-threads=1`
default = [
    "rt_tokio",
    "std",
    "proto-ipv4", "proto-ipv6"
]
